--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Yanbo Xu"
-  avatar           : "profile.png"
+  avatar           : "profile_photo.png"
   bio              : "PhD student in Machine Learning at Georgia Institute of Technology"
   location         : "Atlanta, GA"
   employer         :
