--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=x1QnFEcAAAAJ&hl=en"
   email            : "yxu465 at gatech.edu"
-  uri              :
+  SUNLAB           : "http://www.sunlab.org/"
   bitbucket        :
   codepen          :
   dribbble         :
