--- a/_config.yml
+++ b/_config.yml
@@ -83,10 +83,9 @@ author:
   avatar           : "profile_photo.png"
   bio              : "PhD student in Machine Learning at Georgia Institute of Technology"
   location         : "Atlanta, GA"
-  employer         :
+  employer         : <u><a href="http://www.sunlab.org/">SunLab</a></u>
   googlescholar    : "https://scholar.google.com/citations?user=x1QnFEcAAAAJ&hl=en"
   email            : "yxu465 at gatech.edu"
-  SUNLAB           : "http://www.sunlab.org/"
   bitbucket        :
   codepen          :
   dribbble         :
