--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   avatar           : "profile_photo.png"
   bio              : "PhD student in Machine Learning at Georgia Institute of Technology"
   location         : "Atlanta, GA"
-  employer         : <a href="http://www.sunlab.org/">SunLab</a>
+  employer         : SunLab (http://www.sunlab.org/)
   googlescholar    : "https://scholar.google.com/citations?user=x1QnFEcAAAAJ&hl=en"
   email            : "yxu465 at gatech.edu"
   bitbucket        :
