--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
     url: /publications/
 
     
-  - title: "CV"
-    url: /files/CV-2018.pdf
+#   - title: "CV"
+#     url: /files/CV-2018.pdf
     
   - title: "Fun"
     url: /portfolio/
